<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/health"
	        android:paddingRight="3dip" />
	     <TextView
	         android:id="@+id/health"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/level"
	        android:paddingRight="3dip" />
	     <TextView
	         android:id="@+id/level"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/status"
	        android:paddingRight="3dip" />
	     <TextView
	         android:id="@+id/status"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/plugged"
	        android:paddingRight="3dip" />
	     <TextView
	         android:id="@+id/plugged"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/technology"
	        android:paddingRight="3dip" />
	     <TextView
	         android:id="@+id/technology"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/temperature"
	        android:paddingRight="3dip" />
	     <TextView
	         android:id="@+id/temperature"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/voltage"
	        android:paddingRight="3dip" />
	     <TextView
	         android:id="@+id/voltage"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"/>
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/last_updated"
	        android:paddingRight="3dip" />
	     <TextView
	         android:id="@+id/last_updated"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"/>
    </LinearLayout>
	    
</LinearLayout>